--- a/conteudo/capitulo55.tex
+++ b/conteudo/capitulo55.tex
@@ -1,4 +1,4 @@
-\chapter{Considerações Parciais}\label{cpConsideracoesParciais}
+\chapter{Considerações Finais}\label{cpConsideracoesParciais}
 
 No presente trabalho foi realizado o levantamento da situação atual do portal de algoritmos, reengenharia e modelagem. Para que seja viável a evolução foi preciso ser feito o levantamento de requisitos, engenharia, casos de uso, diagramas relacionados e prototipação de telas.
 
