--- a/conteudo/capitulo1.tex
+++ b/conteudo/capitulo1.tex
@@ -1,8 +1,10 @@
 \chapter{Introdução}\label{cpIntroducao}
 
-No presente trabalho será realizada a evolução do módulo de gerenciamento do portal de algoritmos da Universidade de Caxias do Sul. Nesse mesmo período está sendo desenvolvido pelo aluno Gabriel Weber um trabalho que visa a evolução do analisador algorítmico \cite{Weber2015}. Os dois trabalhos são desenvolvidos em paralelo, pois um irá complementar o outro.
+No presente trabalho será realizada a evolução do módulo de gerenciamento do portal de algoritmos da Universidade de Caxias do Sul. Nesse mesmo período foi desenvolvido pelo aluno Gabriel Weber um trabalho que visa a evolução do analisador algorítmico \cite{Weber2015}.
 
 O portal de algoritmos, desenvolvido no ano de 2009 pelos professores Ricardo Vargas Dorneles e Delcino Picinin Junior, da Universidade de Caxias do Sul, tem por objetivo auxiliar no ensino da lógica de programação através da linguagem do português estruturado, também conhecida como portugol e é utilizado pelos alunos do \ac{CCET} e público em geral. Esse portal oferece ao aluno a possibilidade de exercitar sua lógica através de exercícios cadastrados pelos professores, utilizando a linguagem portugol em um editor específico. O aluno submete soluções de problemas a fim de validá-las e pode acompanhar seu desempenho através de um ranking de submissões de soluções corretas. O portal possui uma seção de gerenciamento que somente administradores podem acessar. Nessa administração há a possibilidade de acompanhar a evolução dos alunos, suas submissões de soluções, visualização e edição de usuário, de problemas, de dados de testes e palavras-chave \cite{Dorneles2004}.
+
+No ano de 2016 o \textit{software} cliente do portal de algorítmos foi refeito, pois naquele ano foi preciso migrar o programa escrito em \textit{Java Applet} para um aplicativo \textit{Desktop}, trocando informações com o portal servido através de \textit{Web Services}. No entandto, o \textit{software} servidor não foi migrado, e é neste contexto que este trabalho está inserido.
 
 Na criação de um problema, o administrador informa um nome e uma descrição do problema a ser solucionado, dicas e palavras-chave, sendo que as últimas  informações não são obrigatórias. Também são informadas entradas de dados para testes e as saídas esperadas para as entradas informadas. Já na edição do problema, as mesmas informações citadas acimas podem ser alteradas.
 
@@ -29,6 +31,8 @@ Com \textit{Python} e \textit{Django} foram desenvolvidas todos os modelos de cl
 Será realizada a diagramação das classes atuais utilizando-se da notação \ac{UML}. Serão utilizados diagramas de classes de domínio, que representarão essas classes, interfaces e suas associações, para que depois sejam usadas no desenvolvimento de um modelo de sistema orientado a objetos \cite{Pressman2011, Sommerville2011}.
 
 Através da engenharia de \textit{software} será produzido um novo portal de algoritmos, desde os estágios inicias da especificação do sistema até sua manutenção. Com o uso de engenharia de \textit{software} espera-se obter resultados de qualidade e requeridos dentro do cronograma \cite{Sommerville2011}.
+
+
 
 Para atingir o objetivo proposto, o trabalho está organizado da seguinte forma:
 
